--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     overflow: hidden;
     background: black;
+    color: black;
+    font-family: monospace;
 }
 #top {
     position: fixed;
@@ -16,6 +18,7 @@ input,button {
     color: black;
     border: 1px solid;
     border-radius: 0px;
+    font-family: monospace;
 }
 
 #content {
