--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ input,button {
     top: 0;
     left: 0;
     width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     z-index: -1;
 }
 .row {
